@@ -20,6 +20,7 @@ Changes in progress
 - Themes: Moved common code to parent theme and done minor improvements (Trello #1094)
 - XTEC-mailer: Moved idApp from database to code (Trello #894)
 - BuddyPress: Updated from version 2.3.2.1 to version 2.4.3 (Trello #1040)
+- Intraweb-importer: Improved import of 'Content' module (Trello #1051)
 
 
 Changes 15.12.14
